--- a/final_project/attribution.html
+++ b/final_project/attribution.html
@@ -18,3 +18,54 @@
   <p>logos</p>
   <div>Icons made by <a href="https://www.flaticon.com/authors/smalllikeart" title="smalllikeart">smalllikeart</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
 </div>
+<div>
+  <p>Tours</p>
+  <div>
+    <span>Palancar Reef</span>
+    <a href="https://www.tripadvisor.com/Attraction_Review-g150809-d153000-Reviews-Palancar_Reef-Cozumel_Yucatan_Peninsula.html">Trip Advisor</a>
+    <a href="https://media-cdn.tripadvisor.com/media/photo-m/1280/15/45/35/50/reef.jpg">image</a>
+  </div>
+  <div>
+    <span>Marine Park</span>
+    <a href="https://thisiscozumel.com/tourist-info/118-marine-park/718-marine-park">thisiscozumel</a>
+    <a href="https://thisiscozumel.com/images/news-2019/thumbs/cozumel-marine-map.jpg">image</a>
+  </div>
+  <div>
+    <span>San Gervasio</span>
+    <a href="https://www.tripadvisor.com/Attraction_Review-g150809-d153309-Reviews-San_Gervasio_Mayan_Archaeological_Site-Cozumel_Yucatan_Peninsula.html">Trip Advisor</a>
+    <a href="https://media-cdn.tripadvisor.com/media/photo-o/0e/53/22/7e/el-pasado-y-el-presente.jpg">image</a>
+  </div>
+  <div>
+    <span>Punta Sur Eco Beach Park</span>
+    <a href="https://www.tripadvisor.com/Attraction_Review-g150809-d7125542-Reviews-Punta_Sur_Eco_Beach_Park-Cozumel_Yucatan_Peninsula.html">Trip Advisor</a>
+    <a href="https://media-cdn.tripadvisor.com/media/photo-m/1280/1c/38/ac/46/vista-desde-el-faro-celarain.jpg">image</a>
+  </div>
+  <div>
+    <span>Cozemul lighthouse</span>
+    <a href="http://cozumelmexico.net/Celarain_Lighthouse.html">cozumelmexico</a>
+    <a href="http://cozumelmexico.net/cozumel_005p.jpg">image</a>
+  </div>
+  <div>
+    <span>Museum of the Island of Cozumel</span>
+    <a href="https://www.tripadvisor.com/Attraction_Review-g150809-d153619-Reviews-Museo_de_la_Isla_de_Cozumel-Cozumel_Yucatan_Peninsula.html">Trip Advisor</a>
+    <a href="https://media-cdn.tripadvisor.com/media/photo-o/0a/e4/38/d4/museo-cozumel-ii.jpg">image</a>
+  </div>
+</div>
+<div>
+  <p>home pictures</p>
+  <div>
+    <span>Maya Heritage Monument</span>
+    <a href="https://www.expedia.com/pictures/mexico/cozumel.d180033?view=large-gallery&page=1">viewFinder</a>
+    <a href="https://a.travel-assets.com/findyours-php/viewfinder/images/res60/231000/231169-Maya-Heritage-Monument.jpg">image</a>
+  </div>
+  <div>
+    <span>Faro Celerain Eco Park</span>
+    <a href="https://www.expedia.com/pictures/mexico/cozumel.d180033?view=large-gallery&photo=231146">viewFinder</a>
+    <a href="https://a.travel-assets.com/findyours-php/viewfinder/images/res60/231000/231146-Faro-Celerain-Eco-Park.jpg">image</a>
+  </div>
+  <div>
+    <span>Faro Celerain Eco Park Beach</span>
+    <a href="https://www.expedia.com/pictures/mexico/cozumel.d180033?view=large-gallery&photo=231153">viewFinder</a>
+    <a href="https://a.travel-assets.com/findyours-php/viewfinder/images/res60/231000/231153-Faro-Celerain-Eco-Park.jpg">image</a>
+  </div>
+</div>
