--- a/final_project/contact.html
+++ b/final_project/contact.html
@@ -27,6 +27,7 @@
       // configure api to use Cozumel in weatherapi.js
       const TOWN_NAME = "cozumel";
     </script>
+    <script defer src="javascript/helper.js"></script>
     <script defer src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script defer src="javascript/load_fonts.js"></script>
     <script defer src="javascript/dynamically_show_text.js"></script>
@@ -48,90 +49,36 @@
       </div>
       <nav class='clearfix hidden'>
         <ul id='navigation' class='hide responsive'>
-          <li class='active'><a href="index.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="rentals.html">Rentals</a></li>
           <li><a href="reservations.html">Reservations</a></li>
           <li><a href="tours.html">Tours!</a></li>
-          <li><a href="contact.html">Contact us!</a></li>
+          <li class='active'><a href="contact.html">Contact us!</a></li>
           <li><a href="attribution.html">Attribution</a></li>
         </ul>
       </nav>
     </header>
     <main>
-      <div class='side-by-side'>
-        <fieldset class="alerts">
-          <legend>No Weather Alerts</legend>
-        </fieldset>
-        <fieldset class='weather'>
-          <legend>Weather</legend>
-          <div class="weather-grid">
-          </div>
-        </fieldset>
-      </div>
-      <fieldset class='rentals'>
-        <legend>Rentals</legend>
-        <div class='rental-table'>
-          <div class="rental-card">
-            <span class='rental-text'>
-              <span>
-                <span class='small-detail'>Going solo? Take this sweet ride!</span>
-                <span class='median-large-detail'>Going solo? Try Honda Metropolitan Scooter! It can take you far, far away!</span>  
-              </span>
-              <a href=""><span class='small-medium-detail'>Reserve it!</span><span class='large-detail'>Reserve ~Honda Metro Scooter Now!</span></a>
-            </span>
-          <img src="images/vehicles/honda_metropolitan650x380.jpg" alt="">
-          </div>
-          <div class="rental-card">
-            <span class='rental-text'>
-              <span>
-                <span class='small-detail'>Have someone with you? Take this double sweet ride!</span>
-                <span  class='median-large-detail'>Have someone with you? Try Honda Duo Scooter! Take someone with you and enjoy the breeze!</span>  
-              </span>
-              <a href=""><span class='small-medium-detail'>Reserve it!</span><span class='large-detail'>Reserve ~Honda Duo Scooter Now!</span></a>
-            </span>
-            <img src="images/vehicles/honda-dio_600x400.jpg" alt="">
-          </div>
-          <div class="rental-card">
-            <span class='rental-text'>
-              <span>
-                <span class='small-detail'>Feeling fancy? Going duo? Take this sweeter ride!</span>
-                <span class='median-large-detail'>Feeling fancy? Going duo? Try Honda PCX150 Scooter! Fastest scooter ever owned!</span>  
-              </span>
-              <a href=""><span class='small-medium-detail'>Reserve it!</span><span class='large-detail'>Reserve ~Honda PCX150 Scooter now!</span></a>
-            </span>
-            <img src="images/vehicles/honda_pcx150_scooter_650x380.jpg" alt="">
-          </div>
-          <div class="rental-card">
-            <span class='rental-text'>
-              <span>
-                <span class='small-detail'>Feeling adventerous? Take this ATV style ride!</span>
-                <span class='median-large-detail'>Feeling adventerous? Try Honda Pioneer ATV! It'll take you to places like never before!</span>  
-              </span>
-              <a href=""><span class='small-medium-detail'>Reserve it!</span><span class='large-detail'>Reserve Honda Pioneer ATV Now!</span></a>
-            </span>
-            <img src="images/vehicles/2021-pioneer-1000-red-650x380.jpg" alt="">
-          </div>
-          <div class="rental-card">
-            <span class='rental-text'>
-              <span>
-                <span class='small-detail'>Feeling adventerous? Have a squad? Take this jeep for a drive!</span>
-                <span class='median-large-detail'>Feeling adventerous? Have a squad? Try Jeep with 4 doors and air conditioner for a drive! You'll get cooled off!</span>  
-              </span>
-              <a href=""><span class='small-medium-detail'>Reserve it!</span><span class='large-detail'>Reserve Jeep with 4 Doors and Air Conditioner Now!</span></a>
-            </span>
-            <img src="images/vehicles/jeep_4_doors.jpg" alt="">
-          </div>
-          <div class="rental-card">
-            <span class='rental-text'>
-              <span>
-                <span class='small-detail'>Feeling adventerous? Just a duo? Take this duo jeep for a drive!</span>
-                <span class='median-large-detail'>Feeling adventerous? Just a duo? Try Jeep with 2 doors for a drive! You'll be protected from any rain!</span>  
-              </span>
-              <a href=""><span class='small-medium-detail'>Reserve it!</span><span class='large-detail'>Reserve Jeep with 2 Doors Now!</span></a>
-            </span>
-            <img src="images/vehicles/jeep_2_doors.jpg" alt="">
-          </div>
+      <fieldset class='contact-info'>
+        <legend>Contact</legend>
+        <div class='contact-info'>
+          <p>Business phone number: (123) 456-7890</p>
+          <p>Open from 4 am until 11 pm.</p>
         </div>
+        <h3 class='contact'>Locations</h3>
+        <div class='maps'>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d33799.53652519632!2d-86.96552178357042!3d20.509667205316337!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sPlaya%20del%20Carmen-Cozumel%20Ferry%20dock!5e0!3m2!1sen!2sus!4v1608159836947!5m2!1sen!2sus" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d3737.7426682856344!2d-86.97723554896956!3d20.475759811733315!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sTerminal%20Puerta%20Maya!5e0!3m2!1sen!2sus!4v1608159931637!5m2!1sen!2sus" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        </div>
+        <form action="confirmation_contact.html" method="GET">
+          <label for="name">First and Last name</label>
+          <input type="text" name="name" id="name" placeholder="John Doe" required>
+          <label for="email">Email</label>
+          <input type="email" name="email" id="email" placeholder="abc@abc.com" required>
+          <label for="comment">Comment</label>
+          <textarea name="comment" id="comment" cols="30" rows="10"></textarea>
+          <input type="submit" value="Contact us!">
+        </form>
       </fieldset>
     </main>
     <footer>
