--- a/final_project/index.html
+++ b/final_project/index.html
@@ -27,6 +27,7 @@
       // configure api to use Cozumel in weatherapi.js
       const TOWN_NAME = "cozumel";
     </script>
+    <script defer src="javascript/helper.js"></script>
     <script defer src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script defer src="javascript/load_fonts.js"></script>
     <script defer src="javascript/dynamically_show_text.js"></script>
@@ -68,6 +69,14 @@
           </div>
         </fieldset>
       </div>
+      <fieldset class='images'>
+        <legend>Pretty Images</legend>
+        <div class='images-grid'>
+          <img src="images/home/maya-heritage-monument.jpg" alt="maya heritage monument">
+          <img src="images/home/faro-celerain-eco-park.jpg" alt="faro celerain eco park">
+          <img src="images/home/faro-celerain-eco-park-beach.jpg" alt="faro celerain eco park beach">
+        </div>
+      </fieldset>
       <fieldset class='rentals'>
         <legend>Rentals</legend>
         <div class='rental-table'>
@@ -77,7 +86,7 @@
                 <span class='small-detail'>Going solo? Take this sweet ride!</span>
                 <span class='median-large-detail'>Going solo? Try Honda Metropolitan Scooter! It can take you far, far away!</span>  
               </span>
-              <a href=""><span class='small-medium-detail'>Reserve it!</span><span class='large-detail'>Reserve ~Honda Metro Scooter Now!</span></a>
+              <a href="reservations.html"><span class='small-medium-detail'>Reserve it!</span><span class='large-detail'>Reserve ~Honda Metro Scooter Now!</span></a>
             </span>
           <img src="images/vehicles/honda_metropolitan650x380.jpg" alt="">
           </div>
@@ -87,7 +96,7 @@
                 <span class='small-detail'>Have someone with you? Take this double sweet ride!</span>
                 <span  class='median-large-detail'>Have someone with you? Try Honda Duo Scooter! Take someone with you and enjoy the breeze!</span>  
               </span>
-              <a href=""><span class='small-medium-detail'>Reserve it!</span><span class='large-detail'>Reserve ~Honda Duo Scooter Now!</span></a>
+              <a href="reservations.html"><span class='small-medium-detail'>Reserve it!</span><span class='large-detail'>Reserve ~Honda Duo Scooter Now!</span></a>
             </span>
             <img src="images/vehicles/honda-dio_600x400.jpg" alt="">
           </div>
@@ -97,7 +106,7 @@
                 <span class='small-detail'>Feeling fancy? Going duo? Take this sweeter ride!</span>
                 <span class='median-large-detail'>Feeling fancy? Going duo? Try Honda PCX150 Scooter! Fastest scooter ever owned!</span>  
               </span>
-              <a href=""><span class='small-medium-detail'>Reserve it!</span><span class='large-detail'>Reserve ~Honda PCX150 Scooter now!</span></a>
+              <a href="reservations.html"><span class='small-medium-detail'>Reserve it!</span><span class='large-detail'>Reserve ~Honda PCX150 Scooter now!</span></a>
             </span>
             <img src="images/vehicles/honda_pcx150_scooter_650x380.jpg" alt="">
           </div>
@@ -107,7 +116,7 @@
                 <span class='small-detail'>Feeling adventerous? Take this ATV style ride!</span>
                 <span class='median-large-detail'>Feeling adventerous? Try Honda Pioneer ATV! It'll take you to places like never before!</span>  
               </span>
-              <a href=""><span class='small-medium-detail'>Reserve it!</span><span class='large-detail'>Reserve Honda Pioneer ATV Now!</span></a>
+              <a href="reservations.html"><span class='small-medium-detail'>Reserve it!</span><span class='large-detail'>Reserve Honda Pioneer ATV Now!</span></a>
             </span>
             <img src="images/vehicles/2021-pioneer-1000-red-650x380.jpg" alt="">
           </div>
@@ -117,7 +126,7 @@
                 <span class='small-detail'>Feeling adventerous? Have a squad? Take this jeep for a drive!</span>
                 <span class='median-large-detail'>Feeling adventerous? Have a squad? Try Jeep with 4 doors and air conditioner for a drive! You'll get cooled off!</span>  
               </span>
-              <a href=""><span class='small-medium-detail'>Reserve it!</span><span class='large-detail'>Reserve Jeep with 4 Doors and Air Conditioner Now!</span></a>
+              <a href="reservations.html"><span class='small-medium-detail'>Reserve it!</span><span class='large-detail'>Reserve Jeep with 4 Doors and Air Conditioner Now!</span></a>
             </span>
             <img src="images/vehicles/jeep_4_doors.jpg" alt="">
           </div>
@@ -127,7 +136,7 @@
                 <span class='small-detail'>Feeling adventerous? Just a duo? Take this duo jeep for a drive!</span>
                 <span class='median-large-detail'>Feeling adventerous? Just a duo? Try Jeep with 2 doors for a drive! You'll be protected from any rain!</span>  
               </span>
-              <a href=""><span class='small-medium-detail'>Reserve it!</span><span class='large-detail'>Reserve Jeep with 2 Doors Now!</span></a>
+              <a href="reservations.html"><span class='small-medium-detail'>Reserve it!</span><span class='large-detail'>Reserve Jeep with 2 Doors Now!</span></a>
             </span>
             <img src="images/vehicles/jeep_2_doors.jpg" alt="">
           </div>
