--- a/final_project/tours.html
+++ b/final_project/tours.html
@@ -23,20 +23,14 @@
       <link rel="stylesheet" href="css/large.css">
     </noscript>
 
-    <script>
-      // configure api to use Cozumel in weatherapi.js
-      const TOWN_NAME = "cozumel";
-    </script>
+    <script defer src="javascript/helper.js"></script>
     <script defer src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script defer src="javascript/load_fonts.js"></script>
-    <script defer src="javascript/dynamically_show_text.js"></script>
     <script defer src="javascript/api.js"></script>
-    <script defer src="javascript/weatherapi.js"></script>
-    <script defer src="javascript/weather_alerts.js"></script>
     <script async src="javascript/menu_responsive.js"></script>
+    <script defer src="javascript/dynamically_show_text.js"></script>
     <!--
     <script defer src="javascript/footer_time.js"></script>
-    <script defer src="javascript/index_cards.js"></script>
     -->
   </head>
   <body>
@@ -48,88 +42,72 @@
       </div>
       <nav class='clearfix hidden'>
         <ul id='navigation' class='hide responsive'>
-          <li class='active'><a href="index.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="rentals.html">Rentals</a></li>
           <li><a href="reservations.html">Reservations</a></li>
-          <li><a href="tours.html">Tours!</a></li>
+          <li class='active'><a href="tours.html">Tours!</a></li>
           <li><a href="contact.html">Contact us!</a></li>
           <li><a href="attribution.html">Attribution</a></li>
         </ul>
       </nav>
     </header>
     <main>
-      <div class='side-by-side'>
-        <fieldset class="alerts">
-          <legend>No Weather Alerts</legend>
-        </fieldset>
-        <fieldset class='weather'>
-          <legend>Weather</legend>
-          <div class="weather-grid">
-          </div>
-        </fieldset>
-      </div>
       <fieldset class='rentals'>
-        <legend>Rentals</legend>
+        <legend>Tours</legend>
         <div class='rental-table'>
           <div class="rental-card">
             <span class='rental-text'>
               <span>
-                <span class='small-detail'>Going solo? Take this sweet ride!</span>
-                <span class='median-large-detail'>Going solo? Try Honda Metropolitan Scooter! It can take you far, far away!</span>  
+                Palancar Reef
               </span>
-              <a href=""><span class='small-medium-detail'>Reserve it!</span><span class='large-detail'>Reserve ~Honda Metro Scooter Now!</span></a>
+              <a href="https://www.tripadvisor.com/Attraction_Review-g150809-d153000-Reviews-Palancar_Reef-Cozumel_Yucatan_Peninsula.html"><span>Visit</span></a>
             </span>
-          <img src="images/vehicles/honda_metropolitan650x380.jpg" alt="">
+          <img src="images/tours/cozumel-marine-map.jpg" alt="">
           </div>
           <div class="rental-card">
             <span class='rental-text'>
               <span>
-                <span class='small-detail'>Have someone with you? Take this double sweet ride!</span>
-                <span  class='median-large-detail'>Have someone with you? Try Honda Duo Scooter! Take someone with you and enjoy the breeze!</span>  
+                Marine Park
               </span>
-              <a href=""><span class='small-medium-detail'>Reserve it!</span><span class='large-detail'>Reserve ~Honda Duo Scooter Now!</span></a>
+              <a href="https://thisiscozumel.com/tourist-info/118-marine-park/718-marine-park"><span>Visit</span></a>
             </span>
-            <img src="images/vehicles/honda-dio_600x400.jpg" alt="">
+            <img src="images/tours/cozumel_005p.jpg" alt="">
           </div>
           <div class="rental-card">
             <span class='rental-text'>
               <span>
-                <span class='small-detail'>Feeling fancy? Going duo? Take this sweeter ride!</span>
-                <span class='median-large-detail'>Feeling fancy? Going duo? Try Honda PCX150 Scooter! Fastest scooter ever owned!</span>  
+                San Gervasio
               </span>
-              <a href=""><span class='small-medium-detail'>Reserve it!</span><span class='large-detail'>Reserve ~Honda PCX150 Scooter now!</span></a>
+              <a href="https://www.tripadvisor.com/Attraction_Review-g150809-d153309-Reviews-San_Gervasio_Mayan_Archaeological_Site-Cozumel_Yucatan_Peninsula.html"><span>Visit</span></a>
             </span>
-            <img src="images/vehicles/honda_pcx150_scooter_650x380.jpg" alt="">
+            <img src="images/tours/el-pasado-y-el-presente.jpg" alt="">
           </div>
           <div class="rental-card">
             <span class='rental-text'>
               <span>
-                <span class='small-detail'>Feeling adventerous? Take this ATV style ride!</span>
-                <span class='median-large-detail'>Feeling adventerous? Try Honda Pioneer ATV! It'll take you to places like never before!</span>  
+                Punta Sur Eco Beach Park
               </span>
-              <a href=""><span class='small-medium-detail'>Reserve it!</span><span class='large-detail'>Reserve Honda Pioneer ATV Now!</span></a>
+              <a href="https://www.tripadvisor.com/Attraction_Review-g150809-d7125542-Reviews-Punta_Sur_Eco_Beach_Park-Cozumel_Yucatan_Peninsula.html"><span>Visit</span></a>
             </span>
-            <img src="images/vehicles/2021-pioneer-1000-red-650x380.jpg" alt="">
+            <img src="images/tours/museo-cozumel-ii.jpg" alt="">
           </div>
           <div class="rental-card">
             <span class='rental-text'>
               <span>
-                <span class='small-detail'>Feeling adventerous? Have a squad? Take this jeep for a drive!</span>
-                <span class='median-large-detail'>Feeling adventerous? Have a squad? Try Jeep with 4 doors and air conditioner for a drive! You'll get cooled off!</span>  
+                Cozemul lighthouse
               </span>
-              <a href=""><span class='small-medium-detail'>Reserve it!</span><span class='large-detail'>Reserve Jeep with 4 Doors and Air Conditioner Now!</span></a>
+              <a href="http://cozumelmexico.net/Celarain_Lighthouse.html"><span>Visit</span></a>
             </span>
-            <img src="images/vehicles/jeep_4_doors.jpg" alt="">
+            <img src="images/tours/reef.jpg" alt="">
           </div>
           <div class="rental-card">
             <span class='rental-text'>
               <span>
-                <span class='small-detail'>Feeling adventerous? Just a duo? Take this duo jeep for a drive!</span>
-                <span class='median-large-detail'>Feeling adventerous? Just a duo? Try Jeep with 2 doors for a drive! You'll be protected from any rain!</span>  
+                Museum of the Island of Cozumel
               </span>
-              <a href=""><span class='small-medium-detail'>Reserve it!</span><span class='large-detail'>Reserve Jeep with 2 Doors Now!</span></a>
+              <a href="https://www.tripadvisor.com/Attraction_Review-g150809-d153619-Reviews-Museo_de_la_Isla_de_Cozumel-Cozumel_Yucatan_Peninsula.html"><span>Visit</span></a>
             </span>
-            <img src="images/vehicles/jeep_2_doors.jpg" alt="">
+            <img src="images/tours/vista-desde-el-faro-celarain.jpg" alt="">
           </div>
         </div>
       </fieldset>
