adding footer time

--- a/final_project/contact.html
+++ b/final_project/contact.html
@@ -111,6 +111,7 @@
       <div class="copyright">
         <a href="attribution.html">Attribution</a> <span class='dash'>-</span> <span class="other">San Miguel de Cozumel, MX</span><span class='dash'>-</span><span class="other">&copy;2020 All rights reserved.</span>
       </div>
+      <div class='time'>LAST UPDATED: <span id="time"></span></div>
     </footer>
   </body>
 </html>
