--- a/final_project/index.html
+++ b/final_project/index.html
@@ -36,6 +36,7 @@
     <script defer src="javascript/weather_alerts.js"></script>
     <script async src="javascript/menu_responsive.js"></script>
     <script defer src="javascript/footer_time.js"></script>
+    <script defer src="javascript/observe.js"></script>
     <!--
     <script defer src="javascript/index_cards.js"></script>
     -->
@@ -72,9 +73,21 @@
       <fieldset class='images'>
         <legend>Pretty Images</legend>
         <div class='images-grid'>
-          <img src="images/home/maya-heritage-monument.jpg" alt="maya heritage monument">
-          <img src="images/home/faro-celerain-eco-park.jpg" alt="faro celerain eco park">
-          <img src="images/home/faro-celerain-eco-park-beach.jpg" alt="faro celerain eco park beach">
+          <picture>
+            <source srcset="images/home/maya-heritage-monument_983x553.jpg" media="(min-width: 74rem)">
+            <source srcset="images/home/maya-heritage-monument_463x260.jpg" media="(min-width: 27.78rem)">
+            <img src="images/home/maya-heritage-monument_351x197.jpg" alt="maya heritage monument">
+          </picture>
+          <picture>
+            <source srcset="images/home/faro-celerain-eco-park_983x553.jpg" media="(min-width: 74rem)">
+            <source srcset="images/home/faro-celerain-eco-park_463x260.jpg" media="(min-width: 27.78rem)">
+            <img src="images/home/faro-celerain-eco-park_351x197.jpg" alt="Instagram Icon">
+          </picture>
+          <picture>
+            <source srcset="images/home/faro-celerain-eco-park-beach_983x552.jpg" media="(min-width: 74rem)">
+            <source srcset="images/home/faro-celerain-eco-park-beach_463x260.jpg" media="(min-width: 27.78rem)">
+            <img src="images/home/faro-celerain-eco-park-beach_351x197.jpg" alt="Instagram Icon">
+          </picture>
         </div>
       </fieldset>
       <fieldset class='rentals'>
@@ -88,7 +101,11 @@
               </span>
               <a href="reservations.html"><span class='small-medium-detail'>Reserve it!</span><span class='large-detail'>Reserve ~Honda Metro Scooter Now!</span></a>
             </span>
-          <img src="images/vehicles/honda_metropolitan650x380.jpg" alt="">
+            <picture>
+              <source srcset="images/vehicles/honda_metropolitan_683x397.jpg" media="(min-width: 74rem)">
+              <source srcset="images/vehicles/honda_metropolitan_189x86.jpg" media="(min-width: 27.78rem)">
+              <img src="images/vehicles/honda_metropolitan_278x162.jpg" alt="honda_metropolitan_189x86.jpg">
+            </picture>
           </div>
           <div class="rental-card">
             <span class='rental-text'>
@@ -108,7 +125,11 @@
               </span>
               <a href="reservations.html"><span class='small-medium-detail'>Reserve it!</span><span class='large-detail'>Reserve ~Honda PCX150 Scooter now!</span></a>
             </span>
-            <img src="images/vehicles/honda_pcx150_scooter_650x380.jpg" alt="">
+            <picture>
+              <source srcset="images/vehicles/honda_pcx150_scooter_683x400.jpg" media="(min-width: 74rem)">
+              <source srcset="images/vehicles/honda_pcx150_scooter_189x110.jpg" media="(min-width: 27.78rem)">
+              <img src="images/vehicles/honda_pcx150_scooter_278x162.jpg" alt="honda_pcx150_scooter_189x110.jpg">
+            </picture>
           </div>
           <div class="rental-card">
             <span class='rental-text'>
@@ -118,7 +139,11 @@
               </span>
               <a href="reservations.html"><span class='small-medium-detail'>Reserve it!</span><span class='large-detail'>Reserve Honda Pioneer ATV Now!</span></a>
             </span>
-            <img src="images/vehicles/2021-pioneer-1000-red-650x380.jpg" alt="">
+            <picture>
+              <source srcset="images/vehicles/2021-pioneer-1000-red_683x399.jpg" media="(min-width: 74rem)">
+              <source srcset="images/vehicles/2021-pioneer-1000-red-189x110.jpg" media="(min-width: 27.78rem)">
+              <img src="images/vehicles/2021-pioneer-1000-red-278x162.jpg" alt="2021-pioneer-1000-red-189x110.jpg">
+            </picture>
           </div>
           <div class="rental-card">
             <span class='rental-text'>
@@ -128,7 +153,11 @@
               </span>
               <a href="reservations.html"><span class='small-medium-detail'>Reserve it!</span><span class='large-detail'>Reserve Jeep with 4 Doors and Air Conditioner Now!</span></a>
             </span>
-            <img src="images/vehicles/jeep_4_doors.jpg" alt="">
+            <picture>
+              <source srcset="images/vehicles/jeep_4_doors_683x313.jpg" media="(min-width: 74rem)">
+              <source srcset="images/vehicles/jeep_4_doors_189x86.jpg" media="(min-width: 27.78rem)">
+              <img src="images/vehicles/jeep_4_doors_278x127.jpg" alt="jeep_4_doors_189x86.jpg">
+            </picture>
           </div>
           <div class="rental-card">
             <span class='rental-text'>
@@ -138,7 +167,11 @@
               </span>
               <a href="reservations.html"><span class='small-medium-detail'>Reserve it!</span><span class='large-detail'>Reserve Jeep with 2 Doors Now!</span></a>
             </span>
-            <img src="images/vehicles/jeep_2_doors.jpg" alt="">
+            <picture>
+              <source srcset="images/vehicles/jeep_2_doors_683x313.jpg" media="(min-width: 74rem)">
+              <source srcset="images/vehicles/jeep_2_doors_189x86.jpg" media="(min-width: 27.78rem)">
+              <img src="images/vehicles/jeep_2_doors_278x127.jpg" alt="jeep_2_doors_189x86.jpg">
+            </picture>
           </div>
         </div>
       </fieldset>
