updating right names

--- a/final_project/index.html
+++ b/final_project/index.html
@@ -36,7 +36,6 @@
     <script defer src="javascript/weather_alerts.js"></script>
     <script async src="javascript/menu_responsive.js"></script>
     <script defer src="javascript/footer_time.js"></script>
-    <script defer src="javascript/observe.js"></script>
     <!--
     <script defer src="javascript/index_cards.js"></script>
     -->
@@ -81,12 +80,12 @@
           <picture>
             <source srcset="images/home/faro-celerain-eco-park_983x553.jpg" media="(min-width: 74rem)">
             <source srcset="images/home/faro-celerain-eco-park_463x260.jpg" media="(min-width: 27.78rem)">
-            <img src="images/home/faro-celerain-eco-park_351x197.jpg" alt="Instagram Icon">
+            <img src="images/home/faro-celerain-eco-park_351x197.jpg" alt="faro celerain eco park">
           </picture>
           <picture>
             <source srcset="images/home/faro-celerain-eco-park-beach_983x552.jpg" media="(min-width: 74rem)">
             <source srcset="images/home/faro-celerain-eco-park-beach_463x260.jpg" media="(min-width: 27.78rem)">
-            <img src="images/home/faro-celerain-eco-park-beach_351x197.jpg" alt="Instagram Icon">
+            <img src="images/home/faro-celerain-eco-park-beach_351x197.jpg" alt="faro celerain eco park beach">
           </picture>
         </div>
       </fieldset>
@@ -104,7 +103,7 @@
             <picture>
               <source srcset="images/vehicles/honda_metropolitan_683x397.jpg" media="(min-width: 74rem)">
               <source srcset="images/vehicles/honda_metropolitan_189x86.jpg" media="(min-width: 27.78rem)">
-              <img src="images/vehicles/honda_metropolitan_278x162.jpg" alt="honda_metropolitan_189x86.jpg">
+              <img src="images/vehicles/honda_metropolitan_278x162.jpg" alt="honda metropolitan">
             </picture>
           </div>
           <div class="rental-card">
@@ -115,7 +114,11 @@
               </span>
               <a href="reservations.html"><span class='small-medium-detail'>Reserve it!</span><span class='large-detail'>Reserve ~Honda Duo Scooter Now!</span></a>
             </span>
-            <img src="images/vehicles/honda-dio_600x400.jpg" alt="">
+            <picture>
+              <source srcset="images/vehicles/honda-dio_683x455.jpg" media="(min-width: 74rem)">
+              <source srcset="images/vehicles/honda-dio_189x126.jpg" media="(min-width: 27.78rem)">
+              <img src="images/vehicles/honda-dio_278x185.jpg" alt="honda dio scooter">
+            </picture>
           </div>
           <div class="rental-card">
             <span class='rental-text'>
@@ -128,7 +131,7 @@
             <picture>
               <source srcset="images/vehicles/honda_pcx150_scooter_683x400.jpg" media="(min-width: 74rem)">
               <source srcset="images/vehicles/honda_pcx150_scooter_189x110.jpg" media="(min-width: 27.78rem)">
-              <img src="images/vehicles/honda_pcx150_scooter_278x162.jpg" alt="honda_pcx150_scooter_189x110.jpg">
+              <img src="images/vehicles/honda_pcx150_scooter_278x162.jpg" alt="honda pcx150 scooter">
             </picture>
           </div>
           <div class="rental-card">
@@ -142,7 +145,7 @@
             <picture>
               <source srcset="images/vehicles/2021-pioneer-1000-red_683x399.jpg" media="(min-width: 74rem)">
               <source srcset="images/vehicles/2021-pioneer-1000-red-189x110.jpg" media="(min-width: 27.78rem)">
-              <img src="images/vehicles/2021-pioneer-1000-red-278x162.jpg" alt="2021-pioneer-1000-red-189x110.jpg">
+              <img src="images/vehicles/2021-pioneer-1000-red-278x162.jpg" alt="honda pioneer atv">
             </picture>
           </div>
           <div class="rental-card">
@@ -156,7 +159,7 @@
             <picture>
               <source srcset="images/vehicles/jeep_4_doors_683x313.jpg" media="(min-width: 74rem)">
               <source srcset="images/vehicles/jeep_4_doors_189x86.jpg" media="(min-width: 27.78rem)">
-              <img src="images/vehicles/jeep_4_doors_278x127.jpg" alt="jeep_4_doors_189x86.jpg">
+              <img src="images/vehicles/jeep_4_doors_278x127.jpg" alt="jeep with 4 doors">
             </picture>
           </div>
           <div class="rental-card">
@@ -170,7 +173,7 @@
             <picture>
               <source srcset="images/vehicles/jeep_2_doors_683x313.jpg" media="(min-width: 74rem)">
               <source srcset="images/vehicles/jeep_2_doors_189x86.jpg" media="(min-width: 27.78rem)">
-              <img src="images/vehicles/jeep_2_doors_278x127.jpg" alt="jeep_2_doors_189x86.jpg">
+              <img src="images/vehicles/jeep_2_doors_278x127.jpg" alt="jeep with 2 doors">
             </picture>
           </div>
         </div>
