--- a/final_project/tours.html
+++ b/final_project/tours.html
@@ -58,27 +58,27 @@
           <div class="rental-card">
             <span class='rental-text'>
               <span>
-                Palancar Reef
+                Marine Park
               </span>
               <a href="https://www.tripadvisor.com/Attraction_Review-g150809-d153000-Reviews-Palancar_Reef-Cozumel_Yucatan_Peninsula.html"><span>Visit</span></a>
             </span>
             <picture>
               <source srcset="images/tours/cozumel-marine-map_683x384.jpg" media="(min-width: 74rem)">
               <source srcset="images/tours/cozumel-marine-map_198x111.jpg" media="(min-width: 27.78rem)">
-              <img src="images/tours/cozumel-marine-map_278x156.jpg" alt="cozumel-marine-map_198x111.jpg">
+              <img src="images/tours/cozumel-marine-map_278x156.jpg" alt="Marine Park">
             </picture>
           </div>
           <div class="rental-card">
             <span class='rental-text'>
               <span>
-                Marine Park
+                Cozumel lighthouse
               </span>
               <a href="https://thisiscozumel.com/tourist-info/118-marine-park/718-marine-park"><span>Visit</span></a>
             </span>
             <picture>
               <source srcset="images/tours/cozumel_005p_683x539.jpg" media="(min-width: 74rem)">
               <source srcset="images/tours/cozumel_005p_198x156.jpg" media="(min-width: 27.78rem)">
-              <img src="images/tours/cozumel_005p_278x219.jpg" alt="cozumel_005p_198x156.jpg">
+              <img src="images/tours/cozumel_005p_278x219.jpg" alt="Cozumel lighthouse">
             </picture>
           </div>
           <div class="rental-card">
@@ -91,33 +91,7 @@
             <picture>
               <source srcset="images/tours/el-pasado-y-el-presente_683x384.jpg" media="(min-width: 74rem)">
               <source srcset="images/tours/el-pasado-y-el-presente_198x111.jpg" media="(min-width: 27.78rem)">
-              <img src="images/tours/el-pasado-y-el-presente__278x156.jpg" alt="el-pasado-y-el-presente_198x111.jpg">
-            </picture>
-          </div>
-          <div class="rental-card">
-            <span class='rental-text'>
-              <span>
-                Punta Sur Eco Beach Park
-              </span>
-              <a href="https://www.tripadvisor.com/Attraction_Review-g150809-d7125542-Reviews-Punta_Sur_Eco_Beach_Park-Cozumel_Yucatan_Peninsula.html"><span>Visit</span></a>
-            </span>
-            <picture>
-              <source srcset="images/tours/museo-cozumel-ii_683x512.jpg" media="(min-width: 74rem)">
-              <source srcset="images/tours/museo-cozumel-ii_198x148.jpg" media="(min-width: 27.78rem)">
-              <img src="images/tours/museo-cozumel-ii_278x208.jpg" alt="museo-cozumel-ii_198x148.jpg">
-            </picture>
-          </div>
-          <div class="rental-card">
-            <span class='rental-text'>
-              <span>
-                Cozemul lighthouse
-              </span>
-              <a href="http://cozumelmexico.net/Celarain_Lighthouse.html"><span>Visit</span></a>
-            </span>
-            <picture>
-              <source srcset="images/tours/reef_683x512.jpg" media="(min-width: 74rem)">
-              <source srcset="images/tours/reef_198x148.jpg" media="(min-width: 27.78rem)">
-              <img src="images/tours/reef_278x208.jpg" alt="reef_198x148.jpg">
+              <img src="images/tours/el-pasado-y-el-presente_278x156.jpg" alt="San Gervasio">
             </picture>
           </div>
           <div class="rental-card">
@@ -125,12 +99,38 @@
               <span>
                 Museum of the Island of Cozumel
               </span>
+              <a href="https://www.tripadvisor.com/Attraction_Review-g150809-d7125542-Reviews-Punta_Sur_Eco_Beach_Park-Cozumel_Yucatan_Peninsula.html"><span>Visit</span></a>
+            </span>
+            <picture>
+              <source srcset="images/tours/museo-cozumel-ii_683x512.jpg" media="(min-width: 74rem)">
+              <source srcset="images/tours/museo-cozumel-ii_198x148.jpg" media="(min-width: 27.78rem)">
+              <img src="images/tours/museo-cozumel-ii_278x208.jpg" alt="Museum of the Island of Cozumel">
+            </picture>
+          </div>
+          <div class="rental-card">
+            <span class='rental-text'>
+              <span>
+                Palancar Reef
+              </span>
+              <a href="http://cozumelmexico.net/Celarain_Lighthouse.html"><span>Visit</span></a>
+            </span>
+            <picture>
+              <source srcset="images/tours/reef_683x512.jpg" media="(min-width: 74rem)">
+              <source srcset="images/tours/reef_198x148.jpg" media="(min-width: 27.78rem)">
+              <img src="images/tours/reef_278x208.jpg" alt="Palancar Reef">
+            </picture>
+          </div>
+          <div class="rental-card">
+            <span class='rental-text'>
+              <span>
+                Punta Sur Eco Beach Park
+              </span>
               <a href="https://www.tripadvisor.com/Attraction_Review-g150809-d153619-Reviews-Museo_de_la_Isla_de_Cozumel-Cozumel_Yucatan_Peninsula.html"><span>Visit</span></a>
             </span>
             <picture>
               <source srcset="images/tours/vista-desde-el-faro-celarain_683x512.jpg" media="(min-width: 74rem)">
               <source srcset="images/tours/vista-desde-el-faro-celarain_198x148.jpg" media="(min-width: 27.78rem)">
-              <img src="images/tours/vista-desde-el-faro-celarain_278x208.jpg" alt="vista-desde-el-faro-celarain_198x148.jpg">
+              <img src="images/tours/vista-desde-el-faro-celarain_278x208.jpg" alt="Punta Sur Eco Beach Park">
             </picture>
           </div>
         </div>
