updating description meta

--- a/final_project/reservations.html
+++ b/final_project/reservations.html
@@ -9,7 +9,7 @@
     <title>Techy Progression's Weather Page</title>
     <meta
       name="description"
-      content="A home page of ~Scoots website. - WDD 230 - Web Frontend Development at BYUI - Idaho"
+      content="A page where you fill out a form to reserve a vehicle for Cozumel island. - WDD 230 - Web Frontend Development at BYUI - Idaho"
     />
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 
