--- a/final_project/contact.html
+++ b/final_project/contact.html
@@ -9,7 +9,7 @@
     <title>Techy Progression's Weather Page</title>
     <meta
       name="description"
-      content="A home page of ~Scoots website. - WDD 230 - Web Frontend Development at BYUI - Idaho"
+      content="A page where you can contact us as well as to know where to drop off the vehicles. - WDD 230 - Web Frontend Development at BYUI - Idaho"
     />
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 
