--- a/final_project/confirmation_contact.html
+++ b/final_project/confirmation_contact.html
@@ -16,11 +16,13 @@
     <link rel="preload" href="css/small.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <link rel="preload" href="css/medium.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <link rel="preload" href="css/large.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <link rel="preload" href="css/normalize.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 
     <noscript>
       <link rel="stylesheet" href="css/small.css">
       <link rel="stylesheet" href="css/medium.css">
       <link rel="stylesheet" href="css/large.css">
+      <link rel="stylesheet" href="css/normalize.min.css">
     </noscript>
 
     <script defer src="javascript/helper.js"></script>
