updating to fulfil css requirements

--- a/final_project/contact.html
+++ b/final_project/contact.html
@@ -70,7 +70,7 @@
           <input type="email" name="email" id="email" placeholder="abc@abc.com" required>
           <label for="comment">Comment</label>
           <textarea name="comment" id="comment" cols="30" rows="10"></textarea>
-          <input type="submit" value="Contact us!">
+          <input class='submit' type="submit" value="Contact us!">
         </form>
       </fieldset>
     </main>
