--- a/final_project/reservations.html
+++ b/final_project/reservations.html
@@ -95,7 +95,7 @@
             <li>Payment via Google Pay, cash, credit card, debit card, or PayPal.</li>
             <li>Rentals may be returned to either location.</li>
           </ul>
-          <input type="submit" value="Agree and Reserve!">
+          <input class='submit' type="submit" value="Agree and Reserve!">
         </form>
       </fieldset>
     </main>
