--- a/final_project/contact.html
+++ b/final_project/contact.html
@@ -102,7 +102,7 @@
         </a>
       </div>
       <div class="copyright">
-        <a href="attribution.html">Attribution</a> <span class='dash'>-</span> <span class="other">San Miguel de Cozumel, MX</span><span class='dash'>-</span><span class="other">&copy;2020 All rights reserved.</span>
+        <a href="attribution.html">Attribution</a> <span class='dash'>-</span> <span class="other">San Miguel de Cozumel, MX</span> <span class='dash'>-</span><span class="other">&copy;<span id="year"></span> All rights reserved.</span>
       </div>
       <div class='time'>LAST UPDATED: <span id="time"></span></div>
     </footer>
