updating title per page

--- a/final_project/confirmation_contact.html
+++ b/final_project/confirmation_contact.html
@@ -3,10 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--
-    <meta name="viewport" content="width=450" />
-    -->
-    <title>Techy Progression's Weather Page</title>
+    <title>Cozumel Rentals | Contact Confirmation</title>
     <meta
       name="description"
       content="A confirmation page to let the user know that they filled out the contact form. - WDD 230 - Web Frontend Development at BYUI - Idaho"
