--- a/final_project/contact.html
+++ b/final_project/contact.html
@@ -3,10 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--
-    <meta name="viewport" content="width=450" />
-    -->
-    <title>Techy Progression's Weather Page</title>
+
+    <title>Cozumel Rentals | Contact Page</title>
     <meta
       name="description"
       content="A page where you can contact us as well as to know where to drop off the vehicles. - WDD 230 - Web Frontend Development at BYUI - Idaho"
