--- a/final_project/index.html
+++ b/final_project/index.html
@@ -3,10 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--
-    <meta name="viewport" content="width=450" />
-    -->
-    <title>Techy Progression's Weather Page</title>
+    <title>Cozumel Rentals | Home page</title>
     <meta
       name="description"
       content="A home page of ~Scoots website. - WDD 230 - Web Frontend Development at BYUI - Idaho"
