--- a/final_project/rentals.html
+++ b/final_project/rentals.html
@@ -3,10 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--
-    <meta name="viewport" content="width=450" />
-    -->
-    <title>Techy Progression's Weather Page</title>
+    <title>Cozumel Rentals | Rental Page</title>
     <meta
       name="description"
       content="A page where you can find pricing and how many people can ride it. - WDD 230 - Web Frontend Development at BYUI - Idaho"
